// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render AbsencesSummary with 1 absence 1`] = `
<div>
  <h1>
    Viewing total 
    1
     
    Absence
  </h1>
  <p>
    Filtered 
     
    Absences
     
  </p>
</div>
`;

exports[`should correctly render AbsencesSummary with multiple absences 1`] = `
<div>
  <h1>
    Viewing total 
    21
     
    Absences
  </h1>
  <p>
    Filtered 
     
    Absences
     
  </p>
</div>
`;
